<resources>
    <string name="app_name">MobileApp</string>
    //Report
    <string name="ReportTitle">Material Report</string>
    <string name="search">Search</string>
    <string name="show">Choose what to Show</string>
    <string name="ReportPart">Part No.</string>
    <string name="ReportSerial">Serial No.</string>
    <string name="ReportRackNo">Rack No.</string>
    <string name="ReportRackID">Rack ID.</string>
    <string name="ReportStatus">Status</string>
    <string name="ReportQuantity">Quantity</string>
    <string name="ReportStaffID">Staff ID</string>
    <string name="ReportRackIn">Rack In</string>
    <string name="ReportRackOut">Rack Out</string>
    <string name="ReportPDF">Generate PDF</string>
    <string name="ReportExcel">Generate Excel</string>
    <string name="typeHere">Type Here</string>

    <string-array name="criteria">
        <item>Part No</item>
        <item>Serial No</item>
        <item>Status</item>
        <item>Rack ID</item>
    </string-array>
    //retrieve material
    <string name="retrieveTitle">Retrieve Materials</string>
    <string name="scanButton">Scan Serial No.  </string>
    <string name="backButton">Back </string>
    <string name="rackID">Rack ID:</string>
    <string name="rackNum">Rack No:</string>
    <string name="partNum">Part No:</string>
    <string name="SerialNum">Serial No:</string>
    <string name="RackOutDate">Rack Out Date: </string>
    <string name="quantity">Quantity:</string>
    <string name="status">Status:</string>
    <string name="checkList">View Checklist</string>
    <string name="retrieveBy">Retrieved By:</string>

    //receive
    <string name="material">Receive Materials</string>
    <string name="partNo">Part No.:</string>
    <string name="serialNo">Serial No.:</string>
    <string name="quantityReceive">Quantity:</string>
    <string name="statusReceive">Status:</string>
    <string name="receiveDate">Received Date:</string>
    <string name="receiveBy">Received By:</string>
    <string name="scan">Scan Material</string>
    <string name="receiveSave">Receive</string>
    <string name="generate">Generate Barcode</string>
    //checklist
    <string name="checklistTitle">Material Checklist</string>
    //store materials
    <string name="scanProduct">Scan Your Material Serial Number</string>
    <string name="scanRack">Scan Your Rack</string>
    <string name="storeTitle">Store Materials</string>
    <string name="RackInDate">Rack In Date: </string>
    <string name="Store">Store</string>
    <string name="storeRackID">Rack ID:</string>
    <string name="storeBy">Stored By:</string>
    <string name="storeRackNum">Rack No:</string>
    <string name="storePartNum">Part No:</string>
    <string name="storeSerialNum">Serial No:</string>
    <string name="storeQuantity">Quantity:</string>
    <string name="storeStatus">Status:</string>


    //login and homepage
    <string name="hotayi">Hotayi</string>
    <string name="hotayiFull">Hotayi Mobile Warehouse System</string>
    <string name="hotayiSubTitle">Mobile Warehouse System</string>
    <string name="homepageStore">Store</string>
    <string name="homepageReceive">Receive</string>
    <string name="homepageRetrieve">Retrieve</string>
    <string name="homepageReport">Report</string>
    <string name="homepageLogOut">Log Out</string>
    <string name="logIn">Log In</string>

    //barcode generator
    <string name="barcodeGenerator">Barcode Generator</string>
    <string name="enterSerial">Enter code to generate</string>
    <string name="partRecord">Part Record</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>